@@ -9,3 +9,4 @@
 - Added Moss Carpet
 - Added Flowering Lily Pad
 - Added Decorative Stone & Sandstone Pebbles and Rocks
+- Added Flowering Lily Pad to generate in Swamps
